--- a/main.Rmd
+++ b/main.Rmd
@@ -38,5 +38,23 @@ v$density
 ```{r}
 # TODO plot the density and NOT the counts!
 plot(v)
+v
 ```
+
+```{r}
+v_func = function(x, h) {
+    if (x < min(h$breaks) || x > max(h$breaks)) 
+        return(0)
+    
+    for(i in 1:(length(h$breaks)-1)){
+        if (x > h$breaks[i] && x <= h$breaks[i+1])
+            return(h$density[i])
+    }
+}
+
+integrate(function(x) (v_func(x,v) - dbeta(x, 10,10))^2, 0, 1)
+
+curve(Vectorize(v_func)(x,v), from=0, to =1)
+```
+
 
